# traffic-generator

./: README.md  pyproject.toml  requirements.txt  trafficgen.py  urls.yaml
scripts/: tui_demo.py
tests/: conftest.py  test_actions_registry.py  test_config.py  test_handlers_registry.py  test_scheduling.py  test_smoke_selenium.py  test_urlmatch.py
tests/fixtures/: full.yaml  minimal.json
trafficgen/: __init__.py  browser_helpers.py  cli.py  config.py  driver.py  logging_util.py  scheduler.py  state.py  tui.py  urlmatch.py
trafficgen/actions/: __init__.py  base.py  builtins.py  registry.py
trafficgen/handlers/: __init__.py  _video.py  base.py  default.py  generic_video.py  infinite_scroll.py  registry.py  twitch.py  vimeo.py  youtube.py
