[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-generator"
version = "0.2.0"
description = "Lightweight Selenium-based traffic generator with a TUI dashboard, pluggable site handlers and per-target actions."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "selenium>=4.0",
    "pyyaml>=5.0",
]

[project.optional-dependencies]
tui = ["rich>=13.0"]
manager = ["webdriver-manager>=3.8"]
dev = ["pytest>=7.0", "rich>=13.0", "webdriver-manager>=3.8"]

[project.scripts]
trafficgen = "trafficgen.cli:main"

[tool.setuptools]
packages = ["trafficgen", "trafficgen.handlers", "trafficgen.actions"]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "selenium: tests that launch a real browser (deselected by default; run with -m selenium)",
]
addopts = "-m 'not selenium'"
